
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct shellcode_t {int id; } ;


 struct shellcode_t* shellcode_list ;

__attribute__((used)) static int
find_shellcode_by_id (int id, struct shellcode_t **sc)
{
    int i;

    for (i=0; shellcode_list[i].id != -1; i++)
    {
 if (shellcode_list[i].id == id)
 {
     *sc = &shellcode_list[i];
     return 0;
 }
    }

    return -1;
}
