; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_878.c_find_shellcode_by_id.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_878.c_find_shellcode_by_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.shellcode_t = type { i32 }

@shellcode_list = common dso_local global %struct.shellcode_t* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.shellcode_t**)* @find_shellcode_by_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_shellcode_by_id(i32 %0, %struct.shellcode_t** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.shellcode_t**, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.shellcode_t** %1, %struct.shellcode_t*** %5, align 8
  store i32 0, i32* %6, align 4
  br label %7

7:                                                ; preds = %31, %2
  %8 = load %struct.shellcode_t*, %struct.shellcode_t** @shellcode_list, align 8
  %9 = load i32, i32* %6, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds %struct.shellcode_t, %struct.shellcode_t* %8, i64 %10
  %12 = getelementptr inbounds %struct.shellcode_t, %struct.shellcode_t* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = icmp ne i32 %13, -1
  br i1 %14, label %15, label %34

15:                                               ; preds = %7
  %16 = load %struct.shellcode_t*, %struct.shellcode_t** @shellcode_list, align 8
  %17 = load i32, i32* %6, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds %struct.shellcode_t, %struct.shellcode_t* %16, i64 %18
  %20 = getelementptr inbounds %struct.shellcode_t, %struct.shellcode_t* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* %4, align 4
  %23 = icmp eq i32 %21, %22
  br i1 %23, label %24, label %30

24:                                               ; preds = %15
  %25 = load %struct.shellcode_t*, %struct.shellcode_t** @shellcode_list, align 8
  %26 = load i32, i32* %6, align 4
  %27 = sext i32 %26 to i64
  %28 = getelementptr inbounds %struct.shellcode_t, %struct.shellcode_t* %25, i64 %27
  %29 = load %struct.shellcode_t**, %struct.shellcode_t*** %5, align 8
  store %struct.shellcode_t* %28, %struct.shellcode_t** %29, align 8
  store i32 0, i32* %3, align 4
  br label %35

30:                                               ; preds = %15
  br label %31

31:                                               ; preds = %30
  %32 = load i32, i32* %6, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %6, align 4
  br label %7

34:                                               ; preds = %7
  store i32 -1, i32* %3, align 4
  br label %35

35:                                               ; preds = %34, %24
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
